--- a/gradle.properties
+++ b/gradle.properties
@@ -1,21 +1,22 @@
-SYNCED_VERSION_NAME_OBSERVABLEVIEW=1.5.2
-# Project-wide Gradle settings.
-# IDE (e.g. Android Studio) users:
-# Gradle settings configured through the IDE *will override*
-# any settings specified in this file.
+## Project-wide Gradle settings.
+#
 # For more details on how to configure your build environment visit
 # http://www.gradle.org/docs/current/userguide/build_environment.html
+#
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-# Default value: -Xmx10248m -XX:MaxPermSize=256m
-#提升Android studio 编译速度
-#这句主要是设置AS运行时的独立内存和编码格式，默认设置允许内存为1024M，我们这里设置为2048M，当然如果内存足够的话  你也可以设置为4096M，相应也要修改后面MAxPerSize，一般都为运行内存的一半。
-org.gradle.jvmargs=-Xmx4096m -XX:MaxPermSize=2048m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+# Default value: -Xmx1024m -XX:MaxPermSize=256m
+# org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+#
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-#而这两句主要是设置AS运行的并发性，让gradle也能独立并行运行。这样我们就能提高AS的运行速度了。
-org.gradle.parallel=true
+# org.gradle.parallel=true
+#Thu Jun 29 16:09:22 CST 2017
+SYNCED_VERSION_NAME_OBSERVABLEVIEW=1.5.2
+systemProp.http.proxyHost=127.0.0.1
+org.gradle.jvmargs=-Xmx4096m -XX\:MaxPermSize\=2048m -XX\:+HeapDumpOnOutOfMemoryError -Dfile.encoding\=UTF-8
 org.gradle.daemon=true
 org.gradle.configureondemand=true
-
+org.gradle.parallel=true
+systemProp.http.proxyPort=8087
