--- a/LIgnorance/build.gradle
+++ b/LIgnorance/build.gradle
@@ -254,10 +254,17 @@ dependencies {
      */
     compile project(path: ':PhotoPicker')
     /**
-     * Google推荐的图片加载库，专注于流畅的滚动
+     * Glide Google推荐的图片加载库，专注于流畅的滚动
      */
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    /**
+     * Glide图形转换工具
+     */
     compile 'jp.wasabeef:glide-transformations:2.0.1'
+    /**
+     * GPUImage
+     */
+    compile 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.3.0'
     /**
      * Android日志管理器，支持对象、List、Map、数组等输出
      */
