--- a/LIgnorance/src/main/assets/config.properties
+++ b/LIgnorance/src/main/assets/config.properties
@@ -1,4 +1,5 @@
-#数据库版本号，需要更新时，修改此值
-newDBVersion=4
+#
+#数据库版本号，静态数据库需要更新时，修改此值，动态数据库有变化需修改schemaVersion值
+newDBVersion=5
 #FileDir下的数据结构有变化时，需要清空，修改此值
 newFileCacheBeanVersion=4
