--- a/LCRapidDevelop/src/main/AndroidManifest.xml
+++ b/LCRapidDevelop/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.xiaochao.lcrapiddeveloplibrary">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -8,8 +7,9 @@
         android:supportsRtl="true">
         <activity
             android:name=".video.JCFullScreenActivity"
-            android:configChanges="orientation|keyboardHidden"
+            android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="landscape" />
+
         <meta-data
             android:name="com.taobao.android.hotfix.APPSECRET"
             android:value="80e8e37d3bd0483625c0d391ad60a9d0" />
