--- a/BigImageViewer/build.gradle
+++ b/BigImageViewer/build.gradle
@@ -26,7 +26,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion "25.0.3"
 
     defaultConfig {
         minSdkVersion 16
@@ -43,7 +43,7 @@ android {
 }
 
 dependencies {
-    compile "com.android.support:support-annotations:25.3.1"
+    compile 'com.android.support:support-annotations:25.3.1'
     compile 'com.android.support:support-v4:25.3.1'
 
     compile('com.tbruyelle.rxpermissions2:rxpermissions:0.8.2') {
@@ -51,10 +51,10 @@ dependencies {
     }
     compile 'io.reactivex.rxjava2:rxjava:2.0.0'
 
-    compile "com.facebook.fresco:fresco:0.14.1"
-    compile "commons-io:commons-io:2.5"
+    compile 'com.facebook.fresco:fresco:0.14.1'
+    compile 'commons-io:commons-io:2.5'
 
-    compile "com.github.bumptech.glide:glide:3.7.0"
+    compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.github.bumptech.glide:okhttp3-integration:1.4.0@aar'
     compile 'com.squareup.okhttp3:okhttp:3.4.2'
 
