--- a/ExpandableTextView/build.gradle
+++ b/ExpandableTextView/build.gradle
@@ -20,5 +20,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     // to support annotations such as @NonNull
-    compile "com.android.support:support-annotations:25.3.1"
+    compile 'com.android.support:support-annotations:25.3.1'
 }
