解决联动动画滑动不流畅；

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,8 @@
 /CommonUtils/.gitignore
 /JieCaoVideoPlayer/.gitignore
 /Vitamio/build
+/CommonUtils/build
+/JieCaoVideoPlayer/build
+/JieCaoVideoPlayer/JieCaoVideoPlayer.iml
+/CommonUtils/CommonUtils.iml
+/NiceVideoPlayer/NiceVideoPlayer.iml
