--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Oct 17 11:15:18 CST 2016
-sdk.dir=D\:\\adt-bundle-windows\\sdk
+#Mon Sep 11 10:21:14 CST 2017
+sdk.dir=E\:\\Development\\DevelopmentApplication\\AndroidSDK\\sdk
