--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,4 @@
 /JieCaoVideoPlayer/JieCaoVideoPlayer.iml
 /CommonUtils/CommonUtils.iml
 /NiceVideoPlayer/NiceVideoPlayer.iml
+/Vitamio/Vitamio.iml
