--- a/BigImageViewer/build.gradle
+++ b/BigImageViewer/build.gradle
@@ -25,41 +25,44 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 25
+        targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 6
         versionName "1.2.0"
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
 
-dependencies {
-    compile 'com.android.support:support-annotations:25.3.1'
-    compile 'com.android.support:support-v4:25.3.1'
+final SUPPORT_VERSION = rootProject.ext.SUPPORT_VERSION
+final OKHTTP3_VERSION = rootProject.ext.OKHTTP3_VERSION
 
-    compile('com.tbruyelle.rxpermissions2:rxpermissions:0.8.2') {
+dependencies {
+    implementation "com.android.support:support-annotations:$SUPPORT_VERSION"
+    implementation "com.android.support:support-v4:$SUPPORT_VERSION"
+
+    implementation('com.tbruyelle.rxpermissions2:rxpermissions:0.8.2') {
         exclude module: 'rxjava'
     }
-    compile 'io.reactivex.rxjava2:rxjava:2.0.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.0.0'
 
-    compile 'com.facebook.fresco:fresco:0.14.1'
-    compile 'commons-io:commons-io:2.5'
+    implementation 'com.facebook.fresco:fresco:0.14.1'
+    implementation 'commons-io:commons-io:2.5'
 
-    compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.github.bumptech.glide:okhttp3-integration:1.4.0@aar'
-    compile 'com.squareup.okhttp3:okhttp:3.4.2'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.github.bumptech.glide:okhttp3-integration:1.4.0@aar'
+    implementation "com.squareup.okhttp3:okhttp:$OKHTTP3_VERSION"
 
     /**
      * 微博和微信加载高清长图却不OOM,双击放大，单击返回，手动放大等，目前只能加载本地
      */
-    compile project(path: ':SubsamplingScaleImageView')
+    implementation project(path: ':SubsamplingScaleImageView')
 }
