--- a/CommonUtils/build.gradle
+++ b/CommonUtils/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
-        minSdkVersion 12
-        targetSdkVersion 25
+        minSdkVersion 14
+        targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
 
@@ -15,40 +15,41 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 
     //so文件加载，需要添加下面代码
     sourceSets.main {
-        jni.srcDirs = [];
+        jni.srcDirs = []
     }
 }
 
+final SUPPORT_VERSION = rootProject.ext.SUPPORT_VERSION
+final FRESCO_VERSION = rootProject.ext.FRESCO_VERSION
 dependencies {
-    final SUPPORT_VERSION = '25.3.1'
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     //    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile "com.android.support:appcompat-v7:$SUPPORT_VERSION"
-    compile "com.android.support:design:$SUPPORT_VERSION"
-    testCompile 'junit:junit:4.12'
+    implementation "com.android.support:appcompat-v7:$SUPPORT_VERSION"
+    implementation "com.android.support:design:$SUPPORT_VERSION"
+    testImplementation 'junit:junit:4.12'
 
     //Fresco图片加载
-    compile 'com.facebook.fresco:fresco:1.3.0'
+    implementation "com.facebook.fresco:fresco:$FRESCO_VERSION"
     //Picasso图片加载
-    compile 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
     //Glide图片加载
-    compile 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
     //KLog
     //    compile 'com.github.zhaokaiqiang.klog:library:1.5.0'
 
     //编码工具类用到
-    compile files('libs/BASE64Decoder.jar')
+    implementation files('libs/BASE64Decoder.jar')
     //Webservice网络工具类用到
-    compile files('libs/ksoap2-android-assembly-3.3.0-jar-with-dependencies.jar')
-    compile 'com.google.code.gson:gson:2.7'
+    implementation files('libs/ksoap2-android-assembly-3.3.0-jar-with-dependencies.jar')
+    implementation 'com.google.code.gson:gson:2.7'
 }
