--- a/NiceVideoPlayer/build.gradle
+++ b/NiceVideoPlayer/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 25
+        targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 11
         versionName '1.1'
 
@@ -14,29 +14,31 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
 
+final SUPPORT_VERSION = rootProject.ext.SUPPORT_VERSION
+
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
+    testImplementation 'junit:junit:4.12'
+    implementation "com.android.support:appcompat-v7:$SUPPORT_VERSION"
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
 
 //  required, enough for most devices.
-    compile 'tv.danmaku.ijk.media:ijkplayer-java:0.8.0'
-    compile 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.8.0'
+    implementation 'tv.danmaku.ijk.media:ijkplayer-java:0.8.0'
+    implementation 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.8.0'
 //  Other ABIs: optional
-    compile 'tv.danmaku.ijk.media:ijkplayer-armv5:0.8.0'
-    compile 'tv.danmaku.ijk.media:ijkplayer-arm64:0.8.0'
-    compile 'tv.danmaku.ijk.media:ijkplayer-x86:0.8.0'
-    compile 'tv.danmaku.ijk.media:ijkplayer-x86_64:0.8.0'
+    implementation 'tv.danmaku.ijk.media:ijkplayer-armv5:0.8.0'
+    implementation 'tv.danmaku.ijk.media:ijkplayer-arm64:0.8.0'
+    implementation 'tv.danmaku.ijk.media:ijkplayer-x86:0.8.0'
+    implementation 'tv.danmaku.ijk.media:ijkplayer-x86_64:0.8.0'
 //  ExoPlayer as IMediaPlayer: optional, experimental
-    compile 'tv.danmaku.ijk.media:ijkplayer-exo:0.8.0'
+    implementation 'tv.danmaku.ijk.media:ijkplayer-exo:0.8.0'
 }
