--- a/SlidingUpPanelLayout/build.gradle
+++ b/SlidingUpPanelLayout/build.gradle
@@ -4,19 +4,21 @@ repositories {
     mavenCentral()
 }
 
+final SUPPORT_VERSION = rootProject.ext.SUPPORT_VERSION
+
 dependencies {
-    compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.android.support:support-annotations:25.3.1'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
+    implementation "com.android.support:support-v4:$SUPPORT_VERSION"
+    implementation "com.android.support:recyclerview-v7:$SUPPORT_VERSION"
+    implementation "com.android.support:support-annotations:$SUPPORT_VERSION"
 }
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
-        minSdkVersion 9
-        targetSdkVersion 25
+        minSdkVersion 14
+        targetSdkVersion rootProject.ext.targetSdkVersion
         versionName "3.3.1"
         versionCode 16
     }
