--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,25 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply from: 'config/dependencies.gradle'
 
 buildscript {
     repositories {
+        google()
         jcenter()
+        mavenCentral()
+        maven {
+            url "https://jitpack.io"
+        }
+        //ButterKnife
+        maven {
+            url "https://oss.sonatype.org/content/repositories/snapshots"
+        }
     }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
 
-        //ThinR插件在编译时将除R$styleable.class以外的所有R.class删除掉，并且在引用的地方替换成对应的常量，从而达到缩减包大小和减少dex个数的效果
-        classpath 'com.mogujie.gradle:ThinRPlugin:0.0.2'
+    dependencies {
+        classpath 'com.android.tools.build:gradle:3.1.3'
+
+        //ButterKnife
+        classpath 'com.jakewharton:butterknife-gradle-plugin:9.0.0-SNAPSHOT'
 
         //ORM框架之GreenDao
         classpath 'org.greenrobot:greendao-gradle-plugin:3.2.1'
@@ -20,9 +31,24 @@ buildscript {
 
 allprojects {
     repositories {
+        google()
         jcenter()
+        mavenCentral()
         maven {
             url "https://jitpack.io"
+        }
+        //ButterKnife
+        maven {
+            url "https://oss.sonatype.org/content/repositories/snapshots"
+        }
+    }
+
+    //加快编译速度不浪费时间
+    gradle.taskGraph.whenReady {
+        tasks.each { task ->
+            if (task.name.contains("Test")) {
+                task.enabled = false
+            }
         }
     }
 }
@@ -30,7 +56,12 @@ allprojects {
 subprojects {
     buildscript {
         repositories {
+            google()
             jcenter()
+            maven {
+                url "https://jitpack.io"
+            }
+            mavenCentral()
         }
         dependencies {
             classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.1.0'
