--- a/gradle.properties
+++ b/gradle.properties
@@ -13,8 +13,11 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Thu Jun 29 16:09:22 CST 2017
-SYNCED_VERSION_NAME_OBSERVABLEVIEW=1.5.2
-org.gradle.jvmargs=-Xmx4096m -XX\:MaxPermSize\=2048m -XX\:+HeapDumpOnOutOfMemoryError -Dfile.encoding\=UTF-8
+VERSION_OBSERVABLEVIEW=1.5.2
+VERSION_BUTTERKNIFE=8.8.1
+org.gradle.jvmargs=-Xmx8g -XX\:MaxPermSize\=1g -XX\:+HeapDumpOnOutOfMemoryError -Dfile.encoding\=UTF-8
 org.gradle.daemon=true
 org.gradle.configureondemand=true
 org.gradle.parallel=true
+android.enableAapt2=false
+
