--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,33 @@
-include ':LIgnorance', ':FlycoDialog', ':PhotoPicker', ':Ucrop', ':FrescoHelper', ':DragWithFlowLayout', ':EasyRecyclerView', ':FloatingActionButton', ':TopSnackbar', ':LubanCompress', ':ALiYunOSS', ':CBDialog', ':BaseItemLayout', ':StickyHeaderViewPager', ':LCRapidDevelop', ':SearchDialog', ':ObservableScrollView', ':PullToRefreshWithLoadMore', ':SimplifySpan', ':SmoothProgressBar', ':SuspensionIndexBar', ':BigImageViewer', ':ExpandableTextView', ':SlidingUpPanelLayout', ':Transferee', ':SubsamplingScaleImageView', ':FrescoUtils', ':LoadingView', ':MagicIndicator', ':CommonUtils', ':JieCaoVideoPlayer', ':NiceVideoPlayer', ':Vitamio'
+include ':LIgnorance',
+        ':FlycoDialog',
+        ':PhotoPicker',
+        ':Ucrop',
+        ':FrescoHelper',
+        ':DragWithFlowLayout',
+        ':EasyRecyclerView',
+        ':FloatingActionButton',
+        ':TopSnackbar',
+        ':LubanCompress',
+        ':ALiYunOSS',
+        ':CBDialog',
+        ':BaseItemLayout',
+        ':StickyHeaderViewPager',
+        ':LCRapidDevelop',
+        ':SearchDialog',
+        ':ObservableScrollView',
+        ':PullToRefreshWithLoadMore',
+        ':SimplifySpan',
+        ':SmoothProgressBar',
+        ':SuspensionIndexBar',
+        ':BigImageViewer',
+        ':ExpandableTextView',
+        ':SlidingUpPanelLayout',
+        ':Transferee',
+        ':SubsamplingScaleImageView',
+        ':FrescoUtils',
+        ':LoadingView',
+        ':MagicIndicator',
+        ':CommonUtils',
+        ':JieCaoVideoPlayer',
+        ':NiceVideoPlayer',
+        ':Vitamio'
